rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__coordoperation_create_inverse.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: wkt
---
CONVERSION["Inverse of UTM zone 31N",
    METHOD["Inverse of Transverse Mercator",
        ID["INVERSE(EPSG)",9807]],
    PARAMETER["Latitude of natural origin",0,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8801]],
    PARAMETER["Longitude of natural origin",3,
        ANGLEUNIT["degree",0.0174532925199433],
        ID["EPSG",8802]],
    PARAMETER["Scale factor at natural origin",0.9996,
        SCALEUNIT["unity",1],
        ID["EPSG",8805]],
    PARAMETER["False easting",500000,
        LENGTHUNIT["metre",1],
        ID["EPSG",8806]],
    PARAMETER["False northing",0,
        LENGTHUNIT["metre",1],
        ID["EPSG",8807]],
    ID["INVERSE(EPSG)",16031]]
