rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__coordoperation_get_grid_used.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: "format!(\"{grid:?}\")"
---
CoordOperationGridUsed { short_name: "ca_nrc_ntv1_can.tif", full_name: "", package_name: "", url: "https://cdn.proj.org/ca_nrc_ntv1_can.tif", direct_download: true, open_license: true, available: true }
