rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__coordoperation_get_method_info.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: info
---
CoordOperationMethodInfo {
    method_name: "Transverse Mercator",
    method_auth_name: "EPSG",
    method_code: "9807",
}
