rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__crs_get_horizontal_datum.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: wkt
---
ENSEMBLE["World Geodetic System 1984 ensemble",
    MEMBER["World Geodetic System 1984 (Transit)",
        ID["EPSG",1166]],
    MEMBER["World Geodetic System 1984 (G730)",
        ID["EPSG",1152]],
    MEMBER["World Geodetic System 1984 (G873)",
        ID["EPSG",1153]],
    MEMBER["World Geodetic System 1984 (G1150)",
        ID["EPSG",1154]],
    MEMBER["World Geodetic System 1984 (G1674)",
        ID["EPSG",1155]],
    MEMBER["World Geodetic System 1984 (G1762)",
        ID["EPSG",1156]],
    MEMBER["World Geodetic System 1984 (G2139)",
        ID["EPSG",1309]],
    MEMBER["World Geodetic System 1984 (G2296)",
        ID["EPSG",1383]],
    ELLIPSOID["WGS 84",6378137,298.257223563,
        LENGTHUNIT["metre",1],
        ID["EPSG",7030]],
    ENSEMBLEACCURACY[2.0],
    ID["EPSG",6326]]
