rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__cs_get_axis_info.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: info
---
AxisInfo {
    name: "Geodetic longitude",
    abbrev: "Lon",
    direction: East,
    unit_conv_factor: 0.017453292519943295,
    unit_name: "degree",
    unit_auth_name: "EPSG",
    unit_code: "9122",
}
