rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__proj_basic__test_proj_basic__get_ellipsoid.snap
---
source: crates/proj/src/functions/iso19111/proj_basic.rs
expression: wkt
---
ELLIPSOID["WGS 84",6378137,298.257223563,
    LENGTHUNIT["metre",1],
    ID["EPSG",7030]]
